<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/iv_illustration"
            android:layout_width="@dimen/image_height"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_undraw_notes"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/login_title"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@id/tv_tos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_illustration" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            android:gravity="center_horizontal"
            android:text="@string/login_tos"
            app:layout_constraintBottom_toTopOf="@id/mb_sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/mb_sign_in_google"
            android:layout_width="0dp"
            android:background="?colorPrimary"
            android:padding="@dimen/padding_4"
            android:layout_height="wrap_content"
            app:buttonSize="wide"
            app:colorScheme="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>