<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.stefanusj.notesme.ui.note.edit.NoteEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileFragment">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_back"
            style="@style/Widget.NotesMe.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            android:onClick="@{viewModel::onBackClicked}"
            app:icon="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_color"
            style="@style/Widget.NotesMe.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            app:color="@{viewModel.color}"
            app:layout_constraintEnd_toStartOf="@id/mb_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3"
            android:onClick="@{viewModel::onDeleteClicked}"
            android:text="@string/note_delete"
            android:textColor="?colorOnError"
            app:backgroundTint="?colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="mb_back,mb_delete" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_3"
            android:background="@android:color/transparent"
            android:hint="@string/hint_note_title"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:text="@={viewModel.title}"
            android:textAppearance="?textAppearanceHeadline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_note"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_3"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_note_text"
            android:inputType="textMultiLine"
            android:text="@={viewModel.text}"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintBottom_toTopOf="@id/mb_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onEditClicked}"
            android:text="@string/note_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_note"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.NotesMe.Full" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>